# Distcomp

351001/orsik/: pom.xml  run.sh
351001/polozkov/: Dockerfile  docker-compose.yml  pom.xml
351002/Ilian_Bukhovets/: go.mod
351002/Lashchenka/: pom.xml
351002/Mikhalkov/: Distcomp.sln
351003/Guzaev/: .gitignore  requirements.txt
351003/Kisel/: .gitignore
351003/Kolbeko/: .gitignore  main.py
351003/Pulish/: .gitignore  requirements.txt
351003/Sologub/: .env.example  .gitignore  .gitignore.save  Dockerfile
351003/zhuravski/: ArticleHouse.slnx
351004/Barsukov/: main.py
351004/Halukha/: pom.xml
351004/Lazuta/: .gitignore  CMakeLists.txt  CMakePresets.json  config.json
351004/Lazuta/src/: main.cpp
351004/Lazuta/src/api/v1.0/controllers/: EditorController.cc  EditorController.h  IssueController.cc  IssueController.h  LabelController.cc  LabelController.h  PostController.cc  PostController.h
351004/Lazuta/src/dao/: DAO.h  EditorDAO.h  IssueDAO.h  LabelDAO.h  PostDAO.h
351004/Lazuta/src/dto/requests/: EditorRequestTo.h  IssueRequestTo.h  LabelRequestTo.h  PostRequestTo.h
351004/Lazuta/src/dto/responses/: EditorResponseTo.h  IssueResponseTo.h  LabelResponseTo.h  PostResponseTo.h
351004/Lazuta/src/entities/: Editor.cpp  Editor.h  Entity.cpp  Entity.h  Issue.cpp  Issue.h  Label.cpp  Label.h  Post.cpp  Post.h
351004/Lazuta/src/libs/: robin_hood.h
351004/Lazuta/src/mapping/: Mapper.h
351004/Lazuta/src/services/: EditorService.h  IssueService.h  LabelService.h  PostService.h
351004/Lazuta/src/storage/: BaseMemoryStorage.h
(+957 files in other folders)
